<resources>
    <string name="app_name">Gestion Consorcios</string>
    <string name="prefs_file">com.dev.gestionedificios.PREFERENCE_FILE_KEY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_facturas">Expensas</string>
    <string name="menu_mis_unidades">Mis Unidades</string>
    <string name="name_log_out">Cerrar session</string>
    <string name="menu_mi_cuenta">Mi Cuenta</string>

    <string name="nav_user_firstName">Nombre</string>
    <string name="nav_user_lastName">Apellido</string>
    <string name="nav_user_phone">Telefono</string>
    <string name="nav_user_email">Correo Electronico</string>
    <string name="nav_user_pass">Contraseña</string>
    <string name="create_new_account">Crear Cuenta Nueva</string>

    <string name="save_profile">Guardar Cambios</string>

</resources>