<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/nav_facturas"
            android:title="@string/menu_facturas"
            android:icon="@drawable/ic_baseline_feed_24"/>
        <item
            android:id="@+id/nav_misUnidades"
            android:title="@string/menu_mis_unidades"
            android:icon="@drawable/ic_baseline_domain_add_24"/>

        <item android:title="Usuario">

            <menu>
                <item
                    android:id="@+id/nav_myAccount"
                    android:title="Mi cuenta"
                    android:icon="@drawable/ic_baseline_admin_panel_settings_24"
                    />


                 <item
                    android:id="@+id/logOut"
                    android:title="Cerrar sesion"
                    android:icon="@drawable/ic_baseline_logout_24"
                    />



            </menu>
        </item>

    </group>
</menu>