<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".miCuenta.MiCuentaFragment"
    >


        <TextView
            android:id="@+id/text_my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/menu_mi_cuenta"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/ciAvatar"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_my_account"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/selectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/ciAvatar"
        app:layout_constraintEnd_toEndOf="@+id/ciAvatar" />




        <EditText
            android:id="@+id/user_first_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border"
            android:ems="16"
            android:hint="@string/nav_user_firstName"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ciAvatar" />


        <EditText
            android:id="@+id/user_lastname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border"
            android:ems="16"
            android:hint="@string/nav_user_lastName"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_first_name" />

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border"
            android:ems="16"
            android:hint="@string/nav_user_phone"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_lastname" />

    <TextView
        android:id="@+id/user_mail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_border"
        android:ems="16"
        android:hint="Correo Electrónico"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone" />



        <Button
            android:id="@+id/save_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/sign_up_button_selector"
            android:ems="20"
            android:text="@string/save_profile"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_mail"
            app:layout_constraintVertical_bias="0.176"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
